# tersa

./: .env.example  ANDROID_INSTALL.md  CONTRIBUTING.md  Dockerfile  PLAYBOOK.md  README.md  SECURITY.md  package.json  release-please-config.json  tsconfig.production.json
.github/: tersa-0166.patch.b64.0  tersa-0166.patch.b64.1  tersa-0166.patch.b64.2
docs/: advanced-setup.md  hook-chains.md  litellm-setup.md  non-technical-setup.md  quick-start-mac-linux.md  quick-start-windows.md  tester-builds.md
research/: README.md
research/harness-bench/: .gitignore  AGENTS.md  CHANGELOG.md  HANDOFF.md  Makefile  README.md  UPSTREAM.md  pyproject.toml
research/harness-bench/configs/: canary-claude.yaml  canary-profiles-claude.yaml  draft-pilot-claude.yaml  draft-pilot-openai.yaml  draft-tersa-ablation-claude.yaml  draft-tersa-ablation-openai.yaml
research/harness-bench/docs/: ADAPTER_VALIDATION.md  DECISIONS.md  METHODOLOGY.md  PROFILE_MATRIX.md  RESEARCH.md
research/harness-bench/scripts/: audit_job.py  run_canary.sh  run_config.sh  summarize_efficiency.py  validate_configs.py  verify_skill_sources.py
research/harness-bench/src/harness_bench/: __init__.py  profiles.py
research/harness-bench/src/harness_bench/agents/: __init__.py  tersa.py
research/harness-bench/tests/: test_skill_materializer.py  test_summarize_efficiency.py  test_tersa_agent.py
scripts/: .prepare-0166-00.b64  .prepare-0166-01.b64  .prepare-0166-02.b64  .prepare-0166-03.b64  .prepare-0166-04.b64  .prepare-0166-05-0.b64  .prepare-0166-05-1.b64  .prepare-0166-05-2.b64  .prepare-0166-05-3.b64  (+42 more)
(+1084 files in other folders)
