[project]
name = "harness-bench"
version = "0.2.0"
description = "A Harbor-based benchmark layer for coding-agent harnesses"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Aashutosh Vyas" }]
dependencies = [
  "harbor==0.17.1",
  "PyYAML==6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
  "ruff==0.15.20",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_bench"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
